# chordal_wip

./: .gitignore  eda_parsing.py  fix_edge_cases.ods  predict_dataset.py  pyproject.toml  test.py  test_parsing.py  todo
.github/workflows/: python-tests.yaml
chordal_wip/: chordcanonizer.py  chordcleaner.py  chordformatter.py  chordisolator.py  chordpipeline.py  key.py  scales.py
data/: annotated_chords.ods
docs/: edge-cases.md
tests/: test_chordcanonizer.py  test_chordisolator.py  test_chords.py  test_key.py
